# brand-arbiter

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  rules.yaml
.claude/: settings.json
docs/: architecture-one-pager.md  decisions.md  demo-playbook.md  evaluation-framework.md  walkthrough-lab-results.md
docs/adr/: ADR-0001-deterministic-short-circuit-before-gatekeeper.md  ADR-0002-explicit-boolean-polarity-in-llm-prompts.md  ADR-0003-static-yaml-collision-detection.md  ADR-0004-dual-engine-pattern-alignment.md  ADR-0005-vlm-first-perception.md  ADR-0006-vlm-text-extraction.md  ADR-0007-structured-outputs.md  README.md
docs/reviews/: 2026-03-23-self-review.md
plans/: async-dreaming-puddle.md  elegant-tumbling-pancake.md  enchanted-splashing-nest.md  inherited-zooming-crayon.md  p1-execution-roadmap.md  radiant-coalescing-dahl.md  resilient-conjuring-walrus.md  rustling-sauteeing-pnueli.md  serialized-plotting-pike.md  session-summary-adr-migration.md  zany-soaring-papert.md
specs/: README.md  agent-rules.md  brand-compliance-confidence-sketch-v2.1.md  brand-compliance-confidence-sketch-v2.2.md  brand-compliance-confidence-sketch.md  task-02-live-track-a.md  task-03-rule-expansion.md  task-04-live-llm-integration.md  task-finish-prototype.md
src/: live_track_a.py  live_track_b.py  main.py  perception_schema.py  phase1_crucible.py  vlm_perception.py  vlm_provider.py
tests/: conftest.py  test_arbitration.py  test_collisions.py  test_live_track_a.py  test_live_track_b.py  test_main.py  test_structured_outputs.py  test_vlm_perception.py  test_vlm_provider.py
todos/: 001-pending-p2-ghost-of-mastercard-refactor.md  002-pending-p3-phase3-read-through-detection.md  003-pending-p3-phase4-lettercase-regex.md  004-pending-p3-phase6-learning-loop-ui.md  005-completed-p1-live-track-a-vlm-first-perception.md  005-pending-p1-live-track-a-vlm-first-perception.md  005-pending-p1-live-track-a-yolo-opencv.md  005-pending-p3-live-track-a-yolo-opencv.md  006-pending-p1-real-asset-testing.md  006-pending-p3-real-asset-testing.md  009-pending-p3-skill-md-prototype.md  010-pending-p2-actions-yaml-separation.md  011-completed-p1-vlm-provider-abstraction.md  011-pending-p1-vlm-provider-abstraction.md  012-completed-p1-vlm-perception-module.md  012-pending-p1-vlm-perception-module.md  013-pending-p1-benchmark-vlm-models.md  014-pending-p1-structured-outputs.md  015-pending-p1-installable-cli.md  016-pending-p2-rule-groups-namespaces.md  017-pending-p2-grounding-dino-fallback.md  018-pending-p3-mcp-server.md  019-pending-p3-linguistic-confidence-bands.md  020-pending-p3-air-gap-deployment-docs.md  021-pending-p1-evaluation-baseline.md  022-completed-p1-perception-parser-falsy-bug.md  023-pending-p1-perceive-schema-wiring.md  README.md
(+23 files in other folders)
