[project]
name = "brand-arbiter"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["requirements*.txt", ".git", ".claude", "work"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade (modernize syntax for 3.12)
    "B",    # flake8-bugbear (common pitfalls)
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF005", # list concatenation — `list(x) + [y]` is more readable than `[*list(x), y]`
    "RUF015", # `list(x)[0]` vs `next(iter(x))` — readability over micro-optimization
    "SIM108", # if/else vs ternary — explicit blocks are clearer for multi-line logic
]

[tool.ruff.lint.isort]
known-first-party = ["phase1_crucible", "live_track_a", "live_track_b", "main", "vlm_provider"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
